--- a/README.adoc
+++ b/README.adoc
@@ -14,3 +14,13 @@ First attempt uses the embedded wasm approach where we inlude the built wasm wit
 
 The WebAssembly component used is stored here: https://github.com/anthonyikeda/stats-client
 
+== Reference
+
+Here are some articles and repos that I've been using to try and make this work.
+
+* https://github.com/boyanio/angular-wasm
+* https://boyan.io/angular-wasm
+* https://developers.google.com/web/updates/2018/04/loading-wasm
+* https://prestonrichey.com/blog/react-rust-wasm/
+* https://github.com/ballercat/wasm-loader
+* https://malcoded.com/posts/web-assembly-angular/
